# qt-session-lock

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: SessionLockQtConfig.cmake.in
contrib/archlinux/: PKGBUILD
contrib/archlinuxlocal/: PKGBUILD
example/: README.md  lock_example.qml
src/: ext-sessionlock.json  qwaylandextsessionlockintegration.cpp  qwaylandextsessionlockintegration.h  qwaylandextsessionlockintegrationplugin.cpp  qwaylandextsessionlockintegrationplugin.h  qwaylandextsessionlockmanagerintegration.cpp  qwaylandextsessionlockmanagerintegration.h  qwaylandextsessionlocksurface.cpp  qwaylandextsessionlocksurface.h  qwaylandxdgactivationv1.cpp  qwaylandxdgactivationv1.h
src/interfaces/: command.cpp  command.h  shell.cpp  shell.h  window.cpp  window.h
src/qml/: SessionLock.cpp  SessionLock.h
test/: main.cpp
